Use the new logo as an icon. Rename program to just "Graviton" on Mac. AppCompat: make Application.parameters work properly for embedded apps. Import other config files for Mac app packaging and customise a bit. Update newsletter.